--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,11 @@ flask-sqlalchemy = "*"
 scrapy = "*"
 flask-cors = "*"
 python-dotenv = "*"
+pyjwt = "*"
+flask-bcrypt = "*"
+uuid = "*"
+marshmallow = "*"
+flask-jwt-extended = "*"
 
 [requires]
 python_version = "3.8"
